# sage-pharma-supply-agent

./: Makefile  README.md  pyproject.toml
configs/: default.yaml
n8n/workflows/: sage_monitoring.json
src/: logging_config.py
src/data/: feature_engineering.py  feature_engineering_v2.py  feature_engineering_v3.py  loader.py  loader_v2.py  loader_v3.py  preprocessing.py  preprocessing_v2.py  preprocessing_v3.py
src/evaluation/: evaluator.py  metrics.py  visualization.py
src/models/: attention.py  attention_v2.py  attention_v3.py  backbone.py  backbone_v2.py  heads_v2.py  heads_v3.py
src/schemas/: validator.py
src/serving/: api.py  inference.py
src/training/: optimizer.py  optimizer_v2.py  optimizer_v3.py  scheduler.py  trainer.py  trainer_v2.py  trainer_v3.py
src/utils/: config.py  logging_utils.py  sage_connector.py
tests/: test_api.py  test_evaluation.py  test_loader.py  test_model.py  test_training.py
